--- a/jpicorc.in
+++ b/jpicorc.in
@@ -328,26 +328,6 @@
 -smartbacks
 -purify
 
- Shell
-*
-+#!\+\[ 	]\+\[a-z/]/sh\>
--autoindent
--syntax sh
-
-*.sh
--autoindent
--syntax sh
-
- BASH Shell
-*
-+#!\+\[ 	]\+\[a-z/]/bash\>
--autoindent
--syntax sh
-
-*.bash
--autoindent
--syntax sh
-
  CSH
 *
 +#!\+\[ 	]\+\[a-z/]/csh\>
@@ -355,6 +335,18 @@
 -syntax csh
 
 *.csh
+-autoindent
+-syntax csh
+
+*.cshrc
+-autoindent
+-syntax csh
+
+*.login
+-autoindent
+-syntax csh
+
+*.logout
 -autoindent
 -syntax csh
 
@@ -368,6 +360,42 @@
 -autoindent
 -syntax csh
 
+*.tcshrc
+-autoindent
+-syntax csh
+
+ Shell
+*
++#!\+\[ 	]\+\[a-z/]/sh\>
+-autoindent
+-syntax sh
+
+*.sh
+-autoindent
+-syntax sh
+
+*profile
+-autoindent
+-syntax sh
+
+ BASH Shell
+*
++#!\+\[ 	]\+\[a-z/]/bash\>
+-autoindent
+-syntax sh
+
+*.bash
+-autoindent
+-syntax sh
+
+*.bash_login
+-autoindent
+-syntax sh
+
+*.bash_logout
+-autoindent
+-syntax sh
+
  KSH
 *
 +#!\+\[ 	]\+\[a-z/]/ksh\>
@@ -377,6 +405,19 @@
 *.ksh
 -autoindent
 -syntax sh
+
+ LISP
+*.lisp
+-autoindent
+-syntax lisp
+
+*.lsp
+-autoindent
+-syntax lisp
+
+*.el
+-autoindent
+-syntax lisp
 
  Makefile
 *akefile
