--- a/joerc.in
+++ b/joerc.in
@@ -84,6 +84,8 @@
 
  -icase         Search is case insensitive by default.
 
+ -wrap          Search wraps
+
  -rmsg defines the right-justified string.  The first character of -rmsg is
  the background fill character.  The following escape sequences can be used
  in these strings:
