--- a/configure.ac
+++ b/configure.ac
@@ -48,6 +48,7 @@ if test "$termcap" = "yes"; then
 	search_libs="$search_libs termcap"
 fi
 
+AC_SEARCH_LIBS(openpty, util, AC_DEFINE_UNQUOTED(HAVE_OPENPTY, 1, [If we have BSD function openpty()]))
 AC_SEARCH_LIBS(tgetflag, $search_libs, AC_DEFINE_UNQUOTED(TERMINFO, 1, [If we have newer terminfo/termcap capabilities]))
 AC_SEARCH_LIBS(snprintf, snprintf db)
 
