Compile now uses shell window (so you can hit ^C during the compile).
Shell window termination code fix: now all of the output always
makes it to the window.

Added query save loop to save all modified files before build.

Added scratch buffers: they are ignored during ^K X, ^C and
querysave.

^X ^C in jmacs is now much more like emacs.

--- a/jmacsrc.in
+++ b/jmacsrc.in
@@ -668,7 +668,7 @@ stop		^X )		Stop recording macro
 
   ESC-x compile
 
-:def compile switch,"errors",rtn,markb,eof," ",markk,blkdel,filt,query,parserr
+:def compile querysave,query,scratch,"* Build Log *",rtn,markb,eof," ",markk,blkdel,build
 
   Spell-check macros
 
@@ -726,7 +726,8 @@ nextw,edit,query,prevw	^X 4 f			Find file other window
 nextw,edit,query,prevw	^X 4 ^F
 nextw,tag,query,prevw	^X 4 .			Find tag other window
  ask,query,lose,query,abortbuf	^X ^C		Gnu-emacs: Abort buffer in window
-exsave			^X ^C			Save file and exit
+ exsave			^X ^C			Save file and exit
+querysave,query,killjoe	^X ^C			Query to save files, then exit
 lose,query,abortbuf	^X k			Kill buffer in window
 lose,query,edit		^X ^V			Edit a file: no orphaned buffers
 psh,drop,fwrdc,query,markk,blkdel	^[ z	Cut to char
