--- a/jmacsrc.in
+++ b/jmacsrc.in
@@ -725,9 +725,13 @@ nextw,nbuf,prevw	^X 4 b			Switch buffers other window
 nextw,edit,query,prevw	^X 4 f			Find file other window
 nextw,edit,query,prevw	^X 4 ^F
 nextw,tag,query,prevw	^X 4 .			Find tag other window
- ask,query,lose,query,abortbuf	^X ^C		Gnu-emacs: Abort buffer in window
+
+ Old way...
  exsave			^X ^C			Save file and exit
+
+ More like gnu-emacs...
 querysave,query,killjoe	^X ^C			Query to save files, then exit
+
 lose,query,abortbuf	^X k			Kill buffer in window
 lose,query,edit		^X ^V			Edit a file: no orphaned buffers
 psh,drop,fwrdc,query,markk,blkdel	^[ z	Cut to char
