Improve exit messages.
Improve 'lose' which is for jmacs.

Improve ^X for jpico.

Got rid of "end of processs" message in shell windows.

Shell windows can now be orphaned and duplicated (process
is associated with B instead of BW).

Shell window input taken from cmd.c instead of in
actual edit functions.

--- a/jmacsrc.in
+++ b/jmacsrc.in
@@ -732,8 +732,13 @@ nextw,tag,query,prevw	^X 4 .			Find tag other window
  More like gnu-emacs...
 querysave,query,killjoe	^X ^C			Query to save files, then exit
 
-lose,query,abortbuf	^X k			Kill buffer in window
+ Old way...
+ lose,query,abortbuf	^X k			Kill buffer in window
+
+lose,query		^X k			Kill buffer in window
+
 lose,query,edit		^X ^V			Edit a file: no orphaned buffers
+
 psh,drop,fwrdc,query,markk,blkdel	^[ z	Cut to char
 psh,markk,blksave,">>",query	^X a		Append region to file
 retype,
